[package]
name = "tickstream"
version = "0.1.0"
authors = ["rrichardson <rick.richardson@gmail.com"]
edition = "2018"

[lib]
name  = "tickstream"
path = "src/lib.rs"

[[bin]]
name = "tickstream"
path = "src/bin/main.rs"

[dependencies]
tokio-tungstenite = "0.13.0"
url = "2.2.1"
anyhow = "1.0.38"
serde_json = "1.0.62"
bytes = "1.0.1"
futures = "0.3.12"
futures-util = "0.3.12"
async-stream = "0.3.0"
thiserror = "1.0.24"
bincode = "1.3.2"

[dependencies.fake]
features = ["derive"]
version = "2.4.0"

[dependencies.rust_decimal]
features = ["serde-arbitrary-precision","serde-str"]
version = "1.10.3"

[dependencies.reqwest]
features = ["json"]
version = "0.10.0-alpha.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.tokio]
version = "1.2"
features = ["rt-multi-thread", "io-util", "net", "macros"]

[dependencies.tokio-util]
version = "0.6.3"
features = ["codec"]

[dependencies.backoff]
version = "0.3.0"
features = ["tokio"]
